Navbar, searchbox,comments
Navbar icon change depending screen
searchbox position and event image animation
comments styling

--- a/src/app/pages/event/see-event/see-event.component.css
+++ b/src/app/pages/event/see-event/see-event.component.css
@@ -110,6 +110,7 @@ ngx-gallery /deep/ ngx-gallery-image {
   box-shadow: 1px 1px 2px #cccccc, -1px 0px 2px #eeeeee;
   border-radius: 44px 44px;
   display: none;
+  background-color: #e7f3ff;
 }
 
 .reaction {
