--- a/src/app/pages/event/see-event/see-event.component.html
+++ b/src/app/pages/event/see-event/see-event.component.html
@@ -66,7 +66,7 @@
                       <li class="reaction reaction-google" data-reaction="Google">
                         <share-button theme="circles-dark" button="google" [size]="1"></share-button>
                       </li>
-                      <li class="reaction reaction-whats-up" data-reaction="Whats Up">
+                      <li class="reaction reaction-whats-up" data-reaction="WhatsApp">
                         <share-button theme="circles-dark" button="whatsapp" [size]="1"></share-button>
                       </li>
                       <li class="reaction reaction-telegram" data-reaction="Telegram">
