--- a/src/app/templates/comment/comment.component.html
+++ b/src/app/templates/comment/comment.component.html
@@ -16,37 +16,10 @@
             <div *ngIf="!comment.deleted" [innerHTML]="comment.comment" class="ks-message"></div>
             <div *ngIf="comment.deleted" class="ks-message" translate>{{'comment.deleted-text'}}</div>
             <div class="ks-controls">
-              <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted" (click)="addReply(comment)" class="ks-control" translate>{{'comment.reply'}}</a>
-              <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted && comment.user.username===authService.user.username" (click)="editComment(comment)" class="ks-control" translate>{{'comment.edit'}}</a>
-              <a href="javascript:void(0);" *ngIf="authService.user  && !comment.deleted && comment.user.username===authService.user.username" (click)="deleteComment(comment,i)" class="ks-control" translate>{{'comment.delete'}}</a>
-              <a href="javascript:void(0);" *ngIf="!comment.deleted" class="ks-control" translate>{{'comment.hide-replies'}}</a>
-              <a href="javascript:void(0);" *ngIf="!comment.deleted" class="ks-control">View 36 Replies</a>
+              <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted" (click)="addReply(comment)" class="ks-control" translate><i class="la la-reply"></i><span translate>{{'comment.reply'}}</span></a>
+              <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted && comment.user.username===authService.user.username" (click)="editComment(comment)" class="ks-control"><i class="la la-edit"></i><span translate>{{'comment.edit'}}</span></a>
+              <a href="javascript:void(0);" *ngIf="authService.user  && !comment.deleted && comment.user.username===authService.user.username" (click)="deleteComment(comment,i)" class="ks-control" translate><i class="la la-trash"></i><span translate>{{'comment.delete'}}</span></a>
               <a href="javascript:void(0);" *ngIf="authService.user && comment.deleted && comment.user.username===authService.user.username" (click)="recoverComment(comment)" class="ks-control">Berreskuratu</a>
-            </div>
-          </div>
-        </div>
-        <div *ngIf="comment.level!==0" class="ks-replies">
-          <div class="ks-reply">
-            <a href="javascript:void(0);" class="ks-avatar">
-              <img *ngIf="!comment.deleted" src="{{comment.user.currentAvatar}}" width="36" height="36">
-              <img *ngIf="comment.deleted" src="assets/img/defaults/deleted-comment.png" width="36" height="36">
-            </a>
-            <div class="ks-reply-box">
-              <div class="ks-name">
-                <a *ngIf="!comment.deleted" href="javascript:void(0);">{{comment.user.username}}</a>
-                <a *ngIf="comment.deleted" href="javascript:void(0);" translate>{{'comment.deleted'}}</a>
-                <span class="ks-time">{{(comment.createdAt | howLongPipe:localizeService.parser.currentLang).howlong}}</span>
-              </div>
-              <div *ngIf="!comment.deleted" [innerHTML]="comment.comment" class="ks-message"></div>
-              <div *ngIf="comment.deleted" class="ks-message" translate>{{'comment.deleted-text'}}</div>
-              <div class="ks-controls">
-                <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted" (click)="addReply(comment)" class="ks-control" translate>{{'comment.reply'}}</a>
-                <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted && comment.user.username===authService.user.username" (click)="editComment(comment)" class="ks-control" translate>{{'comment.edit'}}</a>
-                <a href="javascript:void(0);" *ngIf="authService.user  && !comment.deleted && comment.user.username===authService.user.username" (click)="deleteComment(comment,i)" class="ks-control" translate>{{'comment.delete'}}</a>
-                <a href="javascript:void(0);" *ngIf="!comment.deleted" class="ks-control" translate>{{'comment.hide-replies'}}</a>
-                <a href="javascript:void(0);" *ngIf="!comment.deleted" class="ks-control">View 36 Replies</a>
-                <a href="javascript:void(0);" *ngIf="authService.user && comment.deleted && comment.user.username===authService.user.username" (click)="recoverComment(comment)" class="ks-control">Berreskuratu</a>
-              </div>
             </div>
           </div>
         </div>
@@ -66,6 +39,50 @@
           </div>
         </form>
       </ng-container>
+      <div *ngIf="firstComments.groupComments.length>1" class="ks-replies-box">
+        <span (click)="firstComments.groupComments[0]._id = !firstComments.groupComments[0]._id" [hidden]="!firstComments.groupComments[0]._id" translate>{{'comment.see-replies'}}</span>
+        <span (click)="firstComments.groupComments[0]._id = !firstComments.groupComments[0]._id" [hidden]="firstComments.groupComments[0]._id" translate>{{'comment.hide-replies'}}</span>
+      <ng-container *ngFor="let comment of firstComments.groupComments">
+        <div *ngIf="comment.level!==0" [hidden]="firstComments.groupComments[0]._id" class="ks-replies">
+          <div class="ks-reply">
+            <a href="javascript:void(0);" class="ks-avatar">
+              <img *ngIf="!comment.deleted" src="{{comment.user.currentAvatar}}" width="25" height="25">
+              <img *ngIf="comment.deleted" src="assets/img/defaults/deleted-comment.png" width="25" height="25">
+            </a>
+            <div class="ks-reply-box">
+              <div class="ks-name">
+                <a *ngIf="!comment.deleted" href="javascript:void(0);">{{comment.user.username}}</a>
+                <a *ngIf="comment.deleted" href="javascript:void(0);" translate>{{'comment.deleted'}}</a>
+                <span class="ks-time">{{(comment.createdAt | howLongPipe:localizeService.parser.currentLang).howlong}}</span>
+              </div>
+              <div *ngIf="!comment.deleted" [innerHTML]="comment.comment" class="ks-message"></div>
+              <div *ngIf="comment.deleted" class="ks-message" translate>{{'comment.deleted-text'}}</div>
+              <div class="ks-controls">
+                <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted" (click)="addReply(comment)" class="ks-control" translate><i class="la la-reply"></i><span translate>{{'comment.reply'}}</span></a>
+              <a href="javascript:void(0);" *ngIf="authService.user && !comment.deleted && comment.user.username===authService.user.username" (click)="editComment(comment)" class="ks-control"><i class="la la-edit"></i><span translate>{{'comment.edit'}}</span></a>
+              <a href="javascript:void(0);" *ngIf="authService.user  && !comment.deleted && comment.user.username===authService.user.username" (click)="deleteComment(comment,i)" class="ks-control" translate><i class="la la-trash"></i><span translate>{{'comment.delete'}}</span></a>
+              <a href="javascript:void(0);" *ngIf="authService.user && comment.deleted && comment.user.username===authService.user.username" (click)="recoverComment(comment)" class="ks-control">Berreskuratu</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Comment Edit Form -->
+        <form *ngIf="editId===comment._id" [formGroup]="formEdit" (ngSubmit)="onSubmitEdit(comment)" class="form-container">
+          <div class="ks-new-comment">
+            <!-- Comment Edit textarea -->
+            <div class="form-group" [ngClass]="{'has-error': (!commentEdit.valid && commentEdit.dirty), 'has-success': (commentEdit.value && commentEdit.valid)}">
+              <textarea *ngIf="browser" [froalaEditor]="froalaOptions" (froalaInit)="initializeFroala($event)" formControlName="commentEdit" capitalize class="form-control"></textarea>
+              <!-- Validation -->
+              <span *ngIf="commentEdit.errors?.required && commentEdit.dirty" class="help-block form-error" translate>{{'validation.required'}}</span>
+              <span *ngIf="commentEdit.errors?.maxlength && commentEdit.dirty " class="help-block form-error" translate>{{'validation.comment-length'}}</span>
+            </div>
+          </div>
+          <div class="form-group text-center">
+            <button [disabled]="!formEdit.valid || submittedEdit " type="submit" class="btn btn-default" translate>{{'comment.reply'}}</button>
+          </div>
+        </form>
+      </ng-container>
+      </div>
     </ng-container>
   </div>
   <!-- Comment Form -->
@@ -80,7 +97,7 @@
       </div>
     </div>
     <div class="form-group text-center">
-      <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-default" translate>{{'auth-form.sign-up'}}</button>
+      <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-default" translate>{{'comment.reply'}}</button>
     </div>
   </form>
 </div>
