--- a/src/app/pages/authentication/reset/new-password/new-password.component.html
+++ b/src/app/pages/authentication/reset/new-password/new-password.component.html
@@ -1,6 +1,6 @@
 <div class="ks-page">
     <div class="ks-page-content">
-        <div class="card panel panel-default ks-light ks-panel ks-login ks-auth">
+        <div class="card panel panel-default ks-light ks-panel ks-login ks-auth auth-card">
             <div class="card-block">
                 <!-- New password Form -->
                 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-container">
@@ -8,7 +8,8 @@
                     <div [ngClass]="messageClass">
                         {{ message }}
                     </div>
-                    <h4 *ngIf="showForm" class="ks-header" translate>{{'auth-form.new-password'}}</h4>
+                    <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+                    <h1 *ngIf="showForm" class="ks-header" translate>{{'auth-form.new-password'}}</h1>
                     <!-- Password Input -->
                     <div *ngIf="showForm" class="form-group" [ngClass]="{'has-error': (!password.valid && password.dirty), 'has-success': (password.valid)}">
                         <div class="input-icon icon-left icon-lg icon-color-primary">
@@ -35,13 +36,13 @@
                         <span *ngIf="!passwords.valid && (password.dirty || repeatPassword.dirty)" class="help-block form-error" translate>{{'validation.password-match'}}</span>
                     </div>
                     <div *ngIf="showForm" class="form-group">
-                        <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-primary btn-block" translate>{{'auth-form.send'}}</button>
+                        <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-success btn-block" translate>{{'auth-form.send'}}</button>
                     </div>
                     <div class="ks-text-center">
-                    	<a [routerLink]="['/sign-in-route'] | localize" translate>{{'auth-form.sign-up-sign-in-link'}}</a>
+                    	<a class="auth-link" [routerLink]="['/sign-in-route'] | localize" translate>{{'auth-form.sign-up-sign-in-link'}}</a>
                     </div>
                     <div class="ks-text-center">
-                        <a [routerLink]="['/reset-username-route'] | localize" translate>{{'auth-form.forgot-username'}}</a>
+                        <a class="auth-link" [routerLink]="['/reset-username-route'] | localize" translate>{{'auth-form.forgot-username'}}</a>
                     </div>
                 </form>
             </div>
