--- a/src/app/pages/authentication/reset/reset-password/reset-password.component.html
+++ b/src/app/pages/authentication/reset/reset-password/reset-password.component.html
@@ -1,14 +1,15 @@
 <div class="ks-page">
     <div class="ks-page-content">
-        <div class="card panel panel-default light ks-panel ks-forgot-password ks-auth">
+        <div class="card panel panel-default light ks-panel ks-forgot-password ks-auth auth-card">
             <div class="card-block">
                 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-container">
                 	<!-- Custom Success/Error Message -->
 					<div [ngClass]="messageClass">
 					{{ message }}
 					</div>			    
-                    <h4 class="ks-header" translate>{{'auth-form.reset-password-title'}}
-                    </h4>
+                    <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+                    <h1 class="ks-header" translate>{{'auth-form.reset-password-title'}}
+                    </h1>
                      <!-- Username Field -->
                     <div class="form-group" [ngClass]="{'has-error': (!username.valid && username.dirty), 'has-success': (username.valid && username.dirty)}">
                         <div class="input-icon icon-left icon-lg icon-color-primary">
@@ -21,13 +22,13 @@
                         <span *ngIf="username.errors?.required && username.dirty" class="help-block form-error" translate>{{'validation.required'}}</span>
                     </div>
 					<div class="form-group">
-                        <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-primary btn-block" translate>{{'auth-form.send'}}</button>
+                        <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-success btn-block" translate>{{'auth-form.send'}}</button>
                     </div>
                     <div class="ks-text-center">
-                        <a [routerLink]="['/sign-in-route'] | localize" translate>{{'auth-form.sign-up-sign-in-link'}}</a>
+                        <a class="auth-link" [routerLink]="['/sign-in-route'] | localize" translate>{{'auth-form.sign-up-sign-in-link'}}</a>
                     </div>
                     <div class="ks-text-center">
-                        <a [routerLink]="['/reset-username-route'] | localize" translate>{{'auth-form.forgot-username'}}</a>
+                        <a class="auth-link" [routerLink]="['/reset-username-route'] | localize" translate>{{'auth-form.forgot-username'}}</a>
                     </div>
                 </form>
             </div>
