--- a/src/app/templates/navbar/navbar.component.html
+++ b/src/app/templates/navbar/navbar.component.html
@@ -132,7 +132,7 @@
         <div *ngIf="!authService.user" class="nav-item dropdown ks-user">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
             <span class="ks-avatar">
-              <img [src]="'/assets/img/avatars/default-avatar.jpg'" alt="authService.user.username" width="36" height="36">
+              <img [src]="'/assets/img/defaults/default-avatar.png'" alt="authService.user.username" width="36" height="36">
             </span>
             <span class="ks-info">
               <span class="ks-name" translate>{{'navbar.user'}}</span>
