--- a/src/app/pages/authentication/activate/activate.component.html
+++ b/src/app/pages/authentication/activate/activate.component.html
@@ -1,12 +1,13 @@
 <div class="ks-page">
     <div class="ks-page-content">
-        <div class="card panel panel-default ks-light ks-panel ks-confirm ks-auth">
+        <div class="card panel panel-default ks-light ks-panel ks-confirm ks-auth auth-card">
             <div class="card-block">
-                <div class="ks-header" translate>{{'auth-form.activate-account-state'}}</div>
+                <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+                <h1 class="ks-header" translate>{{'auth-form.activate-account-title'}}</h1>
                 <div class="ks-description" [ngClass]="messageClass">
                     {{ message }}
                 </div>
-                    <div class="ks-text-center"><a [routerLink]="['/sign-in-route'] | localize" translate>{{'auth-form.sign-up-sign-in-link'}}</a>
+                    <div class="ks-text-center"><a class="auth-link" [routerLink]="['/sign-in-route'] | localize" translate>{{'auth-form.sign-up-sign-in-link'}}</a>
                     </div>
             </div>
         </div>
