--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="ks-page">
   <div class="ks-page-content">
-    <div class="card panel panel-default ks-light ks-panel ks-login ks-auth">
+    <div class="card panel panel-default ks-light ks-panel ks-login ks-auth auth-card">
       <div class="card-block">
         <!-- Login Form -->
         <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-container">
@@ -12,7 +12,8 @@
               <button type="button" class="btn btn-success" translate>{{'auth-form.resend-link'}}</button>
             </a>
           </div>
-          <h4 class="ks-header" translate>{{'auth-form.sign-in-title'}}</h4>
+          <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+          <h1 class="ks-header" translate>{{'auth-form.sign-in-title'}}</h1>
           <!-- Username Field -->
           <div class="form-group" [ngClass]="{'has-error': (!username.valid && username.dirty), 'has-success': (username.valid && username.dirty)}">
             <div class="input-icon icon-left icon-lg icon-color-primary">
@@ -36,15 +37,16 @@
             <span *ngIf="password.errors?.required && password.dirty" class="help-block form-error" translate>{{'validation.required'}}</span>
           </div>
           <div class="form-group">
-            <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-primary btn-block" translate>{{'auth-form.sign-in'}}</button>
-          </div>
-          <div class="ks-text-center"><a [routerLink]="['/sign-up-route'] | localize" translate>{{'auth-form.sign-in-sign-up-link'}}</a>
+            <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-success btn-block" translate>{{'auth-form.sign-in'}}</button>
           </div>
           <div class="ks-text-center">
-            <a [routerLink]="['/reset-username-route'] | localize" translate>{{'auth-form.forgot-username'}}</a>
+            <a class="auth-link" [routerLink]="['/sign-up-route'] | localize" translate>{{'auth-form.sign-in-sign-up-link'}}</a>
           </div>
           <div class="ks-text-center">
-            <a [routerLink]="['/reset-password-route'] | localize" translate>{{'auth-form.forgot-password'}}</a>
+            <a class="auth-link" [routerLink]="['/reset-username-route'] | localize" translate>{{'auth-form.forgot-username'}}</a>
+          </div>
+          <div class="ks-text-center">
+            <a class="auth-link" [routerLink]="['/reset-password-route'] | localize" translate>{{'auth-form.forgot-password'}}</a>
           </div>
         </form>
       </div>
