--- a/src/app/pages/authentication/resend/resend.component.html
+++ b/src/app/pages/authentication/resend/resend.component.html
@@ -1,6 +1,6 @@
 <div class="ks-page">
     <div class="ks-page-content">
-        <div class="card panel panel-default ks-light ks-panel ks-login ks-auth">
+        <div class="card panel panel-default ks-light ks-panel ks-login ks-auth auth-card">
             <div class="card-block">
                 <!-- Login Form -->
                 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-container">
@@ -8,7 +8,8 @@
                     <div [ngClass]="messageClass">
                         {{ message }}
                     </div>
-                    <h4 class="ks-header" translate>{{'auth-form.activate-account-title'}}</h4>
+                    <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+                    <h1 class="ks-header" translate>{{'auth-form.activate-account-title'}}</h1>
                     <!-- Username Field -->
                     <div class="form-group" [ngClass]="{'has-error': (!username.valid && username.dirty), 'has-success': (username.valid && username.dirty)}">
                         <div class="input-icon icon-left icon-lg icon-color-primary">
@@ -32,15 +33,15 @@
                         <span *ngIf="password.errors?.required && password.dirty" class="help-block form-error" translate>{{'validation.required'}}</span>
                     </div>
                     <div class="form-group">
-                        <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-primary btn-block" translate>{{'auth-form.send'}}</button>
+                        <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-success btn-block" translate>{{'auth-form.send'}}</button>
                     </div>
-                    <div class="ks-text-center"><a [routerLink]="['/sign-in-route'] | localize" translate>{{'auth-form.sign-up-sign-in-link'}}</a>
-                    </div>
-                    <div class="ks-text-center">
-                        <a [routerLink]="['/reset-username-route'] | localize" translate>{{'auth-form.forgot-username'}}</a>
+                    <div class="ks-text-center"><a class="auth-link" [routerLink]="['/sign-in-route'] | localize" translate>{{'auth-form.sign-up-sign-in-link'}}</a>
                     </div>
                     <div class="ks-text-center">
-                        <a [routerLink]="['/reset-password-route'] | localize" translate>{{'auth-form.forgot-password'}}</a>
+                        <a class="auth-link" [routerLink]="['/reset-username-route'] | localize" translate>{{'auth-form.forgot-username'}}</a>
+                    </div>
+                    <div class="ks-text-center">
+                        <a class="auth-link" [routerLink]="['/reset-password-route'] | localize" translate>{{'auth-form.forgot-password'}}</a>
                     </div>
                 </form>
             </div>
