--- a/src/app/pages/authentication/reset/reset-username/reset-username.component.html
+++ b/src/app/pages/authentication/reset/reset-username/reset-username.component.html
@@ -1,14 +1,15 @@
 <div class="ks-page">
     <div class="ks-page-content">
-        <div class="card panel panel-default light ks-panel ks-forgot-password ks-auth">
+        <div class="card panel panel-default light ks-panel ks-forgot-password ks-auth auth-card">
             <div class="card-block">
                 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-container">
                 	<!-- Custom Success/Error Message -->
 					<div [ngClass]="messageClass">
 					{{ message }}
 					</div>			    
-                    <h4 class="ks-header" translate>{{'auth-form.reset-username-title'}}
-                    </h4>          
+                    <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+                    <h1 class="ks-header" translate>{{'auth-form.reset-username-title'}}
+                    </h1>          
                     <!-- Email Input -->
                     <div class="form-group" [ngClass]="{'has-error': (!email.valid && email.dirty), 'has-success': (email.valid)}">
                         <div class="input-icon icon-left icon-lg icon-color-primary">
@@ -22,13 +23,13 @@
 
                     </div>
 					<div class="form-group">
-                        <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-primary btn-block" translate>{{'auth-form.send'}}</button>
+                        <button [disabled]="!form.valid || submitted " type="submit" class="btn btn-success btn-block" translate>{{'auth-form.send'}}</button>
                     </div>
                     <div class="ks-text-center">
-                        <a [routerLink]="['/sign-in-route'] | localize" translate>{{'auth-form.sign-up-sign-in-link'}}</a>
+                        <a class="auth-link" [routerLink]="['/sign-in-route'] | localize" translate>{{'auth-form.sign-up-sign-in-link'}}</a>
                     </div>
                     <div class="ks-text-center">
-                        <a [routerLink]="['/reset-password-route'] | localize" translate>{{'auth-form.forgot-password'}}</a>
+                        <a class="auth-link" [routerLink]="['/reset-password-route'] | localize" translate>{{'auth-form.forgot-password'}}</a>
                     </div>
                 </form>
             </div>
