--- a/src/app/pages/event/see-event/see-event.component.html
+++ b/src/app/pages/event/see-event/see-event.component.html
@@ -58,22 +58,22 @@
                     <ul class="reactions-box">
                       <!-- Reaction buttons container-->
                       <li class="reaction reaction-facebook" data-reaction="Facebook">
-                        <share-button theme="circles-dark" button="facebook" [size]="1"></share-button>
+                        <share-button [url]="currentUrl" theme="circles-dark" button="facebook" [size]="1"></share-button>
                       </li>
                       <li class="reaction reaction-twitter" data-reaction="Twitter">
-                        <share-button theme="circles-dark" button="twitter" [size]="1"></share-button>
+                        <share-button [url]="currentUrl" theme="circles-dark" button="twitter" [size]="1"></share-button>
                       </li>
                       <li class="reaction reaction-google" data-reaction="Google">
-                        <share-button theme="circles-dark" button="google" [size]="1"></share-button>
+                        <share-button [url]="currentUrl" theme="circles-dark" button="google" [size]="1"></share-button>
                       </li>
                       <li class="reaction reaction-whats-up" data-reaction="WhatsApp">
-                        <share-button theme="circles-dark" button="whatsapp" [size]="1"></share-button>
+                        <share-button [url]="currentUrl" theme="circles-dark" button="whatsapp" [size]="1"></share-button>
                       </li>
                       <li class="reaction reaction-telegram" data-reaction="Telegram">
-                        <share-button theme="circles-dark" button="telegram" [size]="1"></share-button>
+                        <share-button [url]="currentUrl" theme="circles-dark" button="telegram" [size]="1"></share-button>
                       </li>
                       <li class="reaction reaction-pinterest" data-reaction="Pinterest">
-                        <share-button theme="circles-dark" button="pinterest" [size]="1"></share-button>
+                        <share-button [url]="currentUrl" theme="circles-dark" button="pinterest" [size]="1"></share-button>
                       </li>
                     </ul>
                     </span>
